--- a/en/index.html
+++ b/en/index.html
@@ -124,7 +124,7 @@ Close press advertising, or the upper right corner of the Close button. Once eve
 <h3>
 <a name="%E7%AC%AC%E5%9B%9B%E9%83%A8%E4%BB%BD%E6%98%AF%E6%89%8B%E5%8B%A2%E8% AA%AA%E6%98%8E%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3% 95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E5%9B%9B%E9%83%A8%E4%BB%BD%E6% 98%AF%E6%89%8B%E5%8B%A2%E8%AA%AA%E6%98%8E%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E% A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span></ a>The fourth part of the page is a gesture control method described as follows: </h3>
 
-<pre><code>It can set don't display again. ( user can reset it in the setting). 
+<pre><code>It can set don't display again. ( user can reset it in the setting). </code></pre>
 
 <p><br></p>
 
