--- a/en/index.html
+++ b/en/index.html
@@ -39,7 +39,7 @@
 <h3>
 <a name="%E4%B8%80%E8%88%AC%E7%94%A8%E4%BD%BF%E7%94%A8%E8%80%85%E4%BD%BF%E7% 94%A8-iphoneipad-%E7%B6%B2%E9%A0%81%E9%96%B1%E8%AE%80%E5%B8%B8%E5%B8%B8%E7%A2%B0%E5 %88%B0%E4%B8%8B%E5%88%97%E5%95%8F%E9%A1%8C" class="anchor" href="#%E4%B8%80%E8%88%AC %E7%94%A8%E4%BD%BF%E7%94%A8%E8%80%85%E4%BD%BF%E7%94%A8-iphoneipad-%E7%B6%B2%E9%A0% 81%E9%96%B1%E8%AE%80%E5%B8%B8%E5%B8%B8%E7%A2%B0%E5%88%B0%E4%B8%8B%E5%88%97% E5%95%8F%E9%A1%8C"><span class="octicon octicon-link"></span></a>iPhone / iPad users to read pages often encountered with the following prombles: </ h3>
 
-<pre><code> How to continue reading next time?
+<pre><code>How to continue reading next time?
 Scrolling is difficult to page down/ page up?
 How to track new chapters? 
 Font and background does not look good
@@ -78,8 +78,7 @@ There are four parts in the TraceFiction, the first part is the browser, and the
 <h3>
 <a name="%E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86%E7%80%8F%E8%A6%BD%E5%99%A8%E7% 9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#% E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86%E7%80%8F%E8%A6%BD%E5%99%A8%E7%9A%84%E6% 8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span> </a>The first part of the control method of the browser as follows: </h3>
 
-<pre><code>2指中间点一下：叫出导览页
-2 taps of middle part on the screen: navigation page 
+<pre><code>2 taps of middle part on the screen: navigation page 
 2 taps of left part on the screen: Previous 
 2 taps of right part on the screen: forward
 3 taps: start or pause TTS
