--- a/en/index.html
+++ b/en/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/HassenLin/TraceFiction">View on GitHub</a>
 
-          <h1 id="project_title">追小说</h1>
+          <h1 id="project_title">TraceFiction</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -55,7 +55,7 @@ TTS.
 
 <pre><code>1 record your last viewing position. 
 2 specific site has Javascript re-layout format, adjust the font size and color.
-3 side swipe  page up/page down. 
+3 side swipe page up/page down. 
 4 support TonWenTang character conversion. 
 5 support tracking mode and normal mode. 
 6 supports multiple iOS 7 TTS function, read footer from the left corner, select the text to read, select the text to read until footer. 
@@ -130,7 +130,7 @@ Close press advertising, or the upper right corner of the Close button. Once eve
 <h2>
 <a name="%E9%99%84%E8%A8%BB" class="anchor" href="#%E9%99%84%E8%A8%BB"><span class="octicon octicon-link "></span></a>Notes:</h2>
 
-<pre><code>a. All HTML re-layout using by Javascript. 
+<pre><code>a. All HTML re-layout are using by Javascript. 
 b. character conversion using the same character conversion TonWenTang Javascript. 
 c.TTS rules: 
       1.TTS will choose the top left corner of the elements began to read. 
