--- a/en/index.html
+++ b/en/index.html
@@ -31,13 +31,11 @@
     <!-​​- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="%E6%AD%A1%E8%BF%8E%E4%BD%BF%E7%94%A8%E8%BF%BD%E5%B0%8F%E8%AA%AA" class= "anchor" href="#%E6%AD%A1%E8%BF%8E%E4%BD%BF%E7%94%A8%E8%BF%BD%E5%B0%8F%E8%AA%AA" ><span class="octicon octicon-link"></span></a>Welcome to TraceFiction</h1>
+        <h1>Welcome to TraceFiction</h1>
 
 <p>TraceFiction is a page dedicated to reading fiction generated software.  <br><br></p>
 
-<h3>
-<a name="%E4%B8%80%E8%88%AC%E7%94%A8%E4%BD%BF%E7%94%A8%E8%80%85%E4%BD%BF%E7% 94%A8-iphoneipad-%E7%B6%B2%E9%A0%81%E9%96%B1%E8%AE%80%E5%B8%B8%E5%B8%B8%E7%A2%B0%E5 %88%B0%E4%B8%8B%E5%88%97%E5%95%8F%E9%A1%8C" class="anchor" href="#%E4%B8%80%E8%88%AC %E7%94%A8%E4%BD%BF%E7%94%A8%E8%80%85%E4%BD%BF%E7%94%A8-iphoneipad-%E7%B6%B2%E9%A0% 81%E9%96%B1%E8%AE%80%E5%B8%B8%E5%B8%B8%E7%A2%B0%E5%88%B0%E4%B8%8B%E5%88%97% E5%95%8F%E9%A1%8C"><span class="octicon octicon-link"></span></a>iPhone / iPad users to read pages often encountered with the following prombles: </ h3>
+<h3>iPhone / iPad users to read pages often encountered with the following prombles: </ h3>
 
 <pre><code>How to continue reading next time?
 Scrolling is difficult to page down/ page up?
@@ -50,8 +48,7 @@ TTS.
 
 <p><br></p>
 
-<h3>
-<a name="%E5%9B%A0%E6%87%89%E9%80%99%E4%BA%9B%E5%95%8F%E9%A1%8C%E8%BF%BD%E5% B0%8F%E8%AA%AA%E8%A2%AB%E5%89%B5%E9%80%A0%E5%87%BA%E4%BE%86%E4%BA%86%E5%A4% A7%E8%87%B4%E4%BE%86%E8%AA%AA%E8%BF%BD%E5%B0%8F%E8%AA%AA%E6%9C%89%E4%B8%8B% E5%88%97%E5%8A%9F%E8%83%BD" class="anchor" href="#%E5%9B%A0%E6%87%89%E9%80%99%E4%BA% 9B%E5%95%8F%E9%A1%8C%E8%BF%BD%E5%B0%8F%E8%AA%AA%E8%A2%AB%E5%89%B5%E9%80%A0% E5%87%BA%E4%BE%86%E4%BA%86%E5%A4%A7%E8%87%B4%E4%BE%86%E8%AA%AA%E8%BF%BD%E5% B0%8F%E8%AA%AA%E6%9C%89%E4%B8%8B%E5%88%97%E5%8A%9F%E8%83%BD"><span class="octicon octicon-link "></span></a>In response to these problems, the TraceFiction was created , TraceFiction has the following features: </h3>
+<h3>In response to these problems, the TraceFiction was created , TraceFiction has the following features: </h3>
 
 <pre><code>1 record your last viewing position. 
 2 specific site has Javascript re-layout format, adjust the font size and color.
@@ -75,8 +72,7 @@ Tracking mode provides functions:
 <br>
 There are four parts in the TraceFiction, the first part is the browser, and the second part is the navigation, and the third part is the rest reminder and advertising, and the fourth part is the gesture instructions. <br><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86%E7%80%8F%E8%A6%BD%E5%99%A8%E7% 9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#% E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86%E7%80%8F%E8%A6%BD%E5%99%A8%E7%9A%84%E6% 8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span> </a>The first part of the control method of the browser as follows: </h3>
+<h3>The first part of the control method of the browser as follows: </h3>
 
 <pre><code>2 taps of middle part on the screen: navigation page 
 2 taps of left part on the screen: Previous 
@@ -90,8 +86,7 @@ long press: select content, finished selecting options appear TTS
 
 <p><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%BA%8C%E9%83%A8%E5%88%86%E5%B0%8E%E8%A6%BD%E9%A0%81%E7% 9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#% E7%AC%AC%E4%BA%8C%E9%83%A8%E5%88%86%E5%B0%8E%E8%A6%BD%E9%A0%81%E7%9A%84%E6% 8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span> </a>The navigation page control methods are as follows:</h3>
+<h3>The navigation page control methods are as follows:</h3>
 
 <pre><code>Navigation page is divided into navigation, text and reading list 
 
@@ -111,8 +106,7 @@ Track Listing:
 
 <p><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%B8%89%E9%83%A8%E5%88%86%E4%BC%91%E6%81%AF%E6%8F%90%E9% 86%92%E8%88%87%E5%BB%A3%E5%91%8A%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88% B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E4%B8%89%E9% 83%A8%E5%88%86%E4%BC%91%E6%81%AF%E6%8F%90%E9%86%92%E8%88%87%E5%BB%A3%E5%91% 8A%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82% E4%B8%8B"><span class="octicon octicon-link"></span></a>The third part of the rest reminder ad pages and control methods are as follows: </h3>
+<h3>The third part of the rest reminder ad pages and control methods are as follows: </h3>
 
 <pre><code>Each hour will remind need to let the eye rest. 
 Close press advertising, or the upper right corner of the Close button. Once every three hours basis having advertising, sponsorship about the author (^_^). 
@@ -120,15 +114,13 @@ Close press advertising, or the upper right corner of the Close button. Once eve
 
 <p><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E5%9B%9B%E9%83%A8%E4%BB%BD%E6%98%AF%E6%89%8B%E5%8B%A2%E8% AA%AA%E6%98%8E%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3% 95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E5%9B%9B%E9%83%A8%E4%BB%BD%E6% 98%AF%E6%89%8B%E5%8B%A2%E8%AA%AA%E6%98%8E%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E% A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span></ a>The fourth part of the page is a gesture control method described as follows: </h3>
+<h3>The fourth part of the page is a gesture control method described as follows: </h3>
 
 <pre><code>It can set don't display again. ( user can reset it in the setting). </code></pre>
 
 <p><br></p>
 
-<h2>
-<a name="%E9%99%84%E8%A8%BB" class="anchor" href="#%E9%99%84%E8%A8%BB"><span class="octicon octicon-link "></span></a>Notes:</h2>
+<h2>Notes:</h2>
 
 <pre><code>a. All HTML re-layout are using by Javascript. 
 b. character conversion using the same character conversion TonWenTang Javascript. 
