--- a/en/index.html
+++ b/en/index.html
@@ -109,7 +109,8 @@ Track Listing:
 <h3>The third part of the rest reminder ad pages and control methods are as follows: </h3>
 
 <pre><code>Each hour will remind need to let the eye rest. 
-Close press advertising, or the upper right corner of the Close button. Once every three hours basis having advertising, sponsorship about the author (^_^). 
+Close press advertising, or the upper right corner of the Close button. 
+Once every three hours basis having advertising, just please support the author (^_^). 
 </code></pre>
 
 <p><br></p>
