--- a/en/index.html
+++ b/en/index.html
@@ -110,7 +110,7 @@ Track Listing:
 
 <pre><code>Each hour will remind need to let the eye rest. 
 Close press advertising, or the upper right corner of the Close button. 
-Once every three hours basis having advertising, just please support the author (^_^). 
+Once every three hours basis having advertising, please support the author (^_^). 
 </code></pre>
 
 <p><br></p>
@@ -138,7 +138,7 @@ c.TTS rules:
     <!-​​- FOOTER -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">追小说maintained by <a href="https://github.com/HassenLin">HassenLin</a></p>
+        <p class="copyright">TraceFiction maintained by <a href="https://github.com/HassenLin">HassenLin</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
