--- a/cn/index.html
+++ b/cn/index.html
@@ -31,13 +31,11 @@
     <!-​​- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="%E6%AD%A1%E8%BF%8E%E4%BD%BF%E7%94%A8%E8%BF%BD%E5%B0%8F%E8%AA%AA" class= "anchor" href="#%E6%AD%A1%E8%BF%8E%E4%BD%BF%E7%94%A8%E8%BF%BD%E5%B0%8F%E8%AA%AA" ><span class="octicon octicon-link"></span></a>欢迎使用追小说</h1>
+        <h1>欢迎使用追小说</h1>
 
 <p>追小说是一套专门为了网页小说阅读而产生的软体。 <br><br></p>
 
-<h3>
-<a name="%E4%B8%80%E8%88%AC%E7%94%A8%E4%BD%BF%E7%94%A8%E8%80%85%E4%BD%BF%E7% 94%A8-iphoneipad-%E7%B6%B2%E9%A0%81%E9%96%B1%E8%AE%80%E5%B8%B8%E5%B8%B8%E7%A2%B0%E5 %88%B0%E4%B8%8B%E5%88%97%E5%95%8F%E9%A1%8C" class="anchor" href="#%E4%B8%80%E8%88%AC %E7%94%A8%E4%BD%BF%E7%94%A8%E8%80%85%E4%BD%BF%E7%94%A8-iphoneipad-%E7%B6%B2%E9%A0% 81%E9%96%B1%E8%AE%80%E5%B8%B8%E5%B8%B8%E7%A2%B0%E5%88%B0%E4%B8%8B%E5%88%97% E5%95%8F%E9%A1%8C"><span class="octicon octicon-link"></span></a>一般用使用者使用iPhone/iPad 网页阅读常常碰到下列问题：</ h3>
+<h3>一般用使用者使用iPhone/iPad 网页阅读常常碰到下列问题：</ h3>
 
 <pre><code>不知道读到哪一页？
 卷动很难翻一整页？
@@ -50,8 +48,7 @@
 
 <p><br></p>
 
-<h3>
-<a name="%E5%9B%A0%E6%87%89%E9%80%99%E4%BA%9B%E5%95%8F%E9%A1%8C%E8%BF%BD%E5% B0%8F%E8%AA%AA%E8%A2%AB%E5%89%B5%E9%80%A0%E5%87%BA%E4%BE%86%E4%BA%86%E5%A4% A7%E8%87%B4%E4%BE%86%E8%AA%AA%E8%BF%BD%E5%B0%8F%E8%AA%AA%E6%9C%89%E4%B8%8B% E5%88%97%E5%8A%9F%E8%83%BD" class="anchor" href="#%E5%9B%A0%E6%87%89%E9%80%99%E4%BA% 9B%E5%95%8F%E9%A1%8C%E8%BF%BD%E5%B0%8F%E8%AA%AA%E8%A2%AB%E5%89%B5%E9%80%A0% E5%87%BA%E4%BE%86%E4%BA%86%E5%A4%A7%E8%87%B4%E4%BE%86%E8%AA%AA%E8%BF%BD%E5% B0%8F%E8%AA%AA%E6%9C%89%E4%B8%8B%E5%88%97%E5%8A%9F%E8%83%BD"><span class="octicon octicon-link "></span></a>因应这些问题，追小说被创造出来了，大致来说，追小说有下列功能：</h3>
+<h3>因应这些问题，追小说被创造出来了，大致来说，追小说有下列功能：</h3>
 
 <pre><code>1. 记录你最后观看的位置．
 2. 特定网站有Javascript格式重新布局，可调整字体大小及颜色．
@@ -76,8 +73,7 @@
 <br>
 再来是操作方式，追小说共有四个部分，第一部分是浏览器、第二部分是导览页、第三部分是休息提醒与广告、第四部份是手势说明。 <br><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86%E7%80%8F%E8%A6%BD%E5%99%A8%E7% 9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#% E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86%E7%80%8F%E8%A6%BD%E5%99%A8%E7%9A%84%E6% 8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span> </a>第一部分浏览器的控制方法如下：</h3>
+<h3>第一部分浏览器的控制方法如下：</h3>
 
 <pre><code>2指中间点一下：叫出导览页
 2指左边点一下：上一页
@@ -93,8 +89,7 @@
 
 <p><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%BA%8C%E9%83%A8%E5%88%86%E5%B0%8E%E8%A6%BD%E9%A0%81%E7% 9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#% E7%AC%AC%E4%BA%8C%E9%83%A8%E5%88%86%E5%B0%8E%E8%A6%BD%E9%A0%81%E7%9A%84%E6% 8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span> </a>第二部分导览页的控制方法如下：</h3>
+<h3>第二部分导览页的控制方法如下：</h3>
 
 <pre><code>导览页分为导览、文字与阅读清单
 
@@ -114,8 +109,7 @@
 
 <p><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%B8%89%E9%83%A8%E5%88%86%E4%BC%91%E6%81%AF%E6%8F%90%E9% 86%92%E8%88%87%E5%BB%A3%E5%91%8A%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88% B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E4%B8%89%E9% 83%A8%E5%88%86%E4%BC%91%E6%81%AF%E6%8F%90%E9%86%92%E8%88%87%E5%BB%A3%E5%91% 8A%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82% E4%B8%8B"><span class="octicon octicon-link"></span></a>第三部分休息提醒与广告页面的控制方法如下：</h3>
+<h3>第三部分休息提醒与广告页面的控制方法如下：</h3>
 
 <pre><code>每一小时会提醒需要让眼睛休息。
 关闭请按广告，或右上角的关闭按钮。每三小时需按一次广告，赞助一下作者(^_^)。
@@ -123,16 +117,14 @@
 
 <p><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E5%9B%9B%E9%83%A8%E4%BB%BD%E6%98%AF%E6%89%8B%E5%8B%A2%E8% AA%AA%E6%98%8E%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3% 95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E5%9B%9B%E9%83%A8%E4%BB%BD%E6% 98%AF%E6%89%8B%E5%8B%A2%E8%AA%AA%E6%98%8E%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E% A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span></ a>第四部份是手势说明页面的控制方法如下：</h3>
+<h3>第四部份是手势说明页面的控制方法如下：</h3>
 
 <pre><code>可以按不再显示(可以在设定内再次叫出)。
 </code></pre>
 
 <p><br></p>
 
-<h2>
-<a name="%E9%99%84%E8%A8%BB" class="anchor" href="#%E9%99%84%E8%A8%BB"><span class="octicon octicon-link "></span></a>附注:</h2>
+<h2>附注:</h2>
 
 <pre><code>a.网页格式处理皆由Javascript完成。
 b.繁简转换使用同文堂繁简转换Javascript。
@@ -153,7 +145,7 @@ d.TTS 规则：
     <!-​​- FOOTER -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">追小说maintained by <a href="https://github.com/HassenLin">HassenLin</a></p>
+        <p class="copyright">追小说 maintained by <a href="https://github.com/HassenLin">HassenLin</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
