--- a/en/index.html
+++ b/en/index.html
@@ -35,58 +35,58 @@
 
 <p>TraceFiction is a page dedicated to reading fiction generated software.  <br><br></p>
 
-<h3>iPhone / iPad users to read pages often encountered with the following prombles: </ h3>
+<h3>iPhone / iPad users read web fiction often encountered with the following prombles: </ h3>
 
-<pre><code>How to continue reading next time?
-Scrolling is difficult to page down/ page up?
-How to track new chapters? 
-Font and background does not look good
+<pre><code>How to continue reading at next time?
+It is difficult page down/page up.
+How to track newest chapters? 
+Font and background can't change.
 Unable to full-page view.
-Read Chinese Simple/Traditional words. 
+Read difficult between Chinese Simple/Traditional words. 
 TTS. 
 </code></pre>
 
 <p><br></p>
 
-<h3>In response to these problems, the TraceFiction was created , TraceFiction has the following features: </h3>
+<h3>In response to these problems, the TraceFiction was created, TheTraceFiction has the following features: </h3>
 
-<pre><code>1 record your last viewing position. 
-2 specific site has Javascript re-layout format, adjust the font size and color.
-3 side swipe page up/page down. 
-4 support TonWenTang character conversion. 
-5 support tracking mode and normal mode. 
-6 supports multiple iOS 7 TTS function, read footer from the left corner, select the text to read, select the text to read until footer. 
-7 support wire, Bluetooth headsets and other playback controls 
-8 support background read mode
+<pre><code>1. Record your last viewing position. 
+2. Specific site supply Javascript re-layout format, adjust the font size and color.
+3. Swipe edge for page up/page down. 
+4. Support TonWenTang character conversion. 
+5. Support tracking mode and normal mode. 
+6. Supports multiple iOS 7 TTS function, read footer from the left corner, select the text to read, select the text to read until footer. 
+7. Support wire, Bluetooth headsets and other playback controls 
+8. Support background read mode
 </code></pre>
 
 <p><br>
 First, the page is divided into two TraceFiction modes - normal mode and tracking mode.  <br>
-Under normal mode, TraceFiction similar general web browser , the different are that it only provides "desktop mode" full page view. Previous, Next and navigate all shall gesture control operations.<br><br>
+Under normal mode, TraceFiction similar general web browser , the different are that it only provides "desktop mode" and full screen view. Previous, Forward and navigate control by gesture.<br><br>
 Normal mode provides functions:
-    Previous, Next, reload the page, turn one on the next turn one, TTS (text to speech), zoom and fit the screen functions.<br><br>
-Tracking mode is different to general web browsing quite , it will be synchronized to update records where are you reading, that is, tracking list will record your last reading position, the next time you turn on automatically jump to the last  location, and can simultaneously track multiple book.<br>
-    After the page loads, it will automatically translate  traditional or simplified chinese with the setting. Certain sites, support Javascript automatic layout, page will become more suitable for reading novels. Formats such as exhibited on the App Store. <br><br>
+    Previous, Forward, reload the page, page up, page down, TTS (text to speech), zoom and fit the screen functions.<br><br>
+Tracking mode is different to general web browsing, it will be synchronized to update records where are you reading, tracking list will record your last reading position, the next time you turn on automatically jump to the last location, and can simultaneously track multiple book.<br>
+    After the page loads, it will automatically translate traditional or simplified chinese by setting. Certain sites, support Javascript automatic layout, page will become more suitable for reading. Formats such as exhibited on the App Store. <br><br>
 Tracking mode provides functions:
-    Previous, Next, reload the page, turn one on the next turn one, TTS (text to speech), character conversion, Javascript format conversion. 
+    Previous, Next, reload the page, page up, page down, TTS (text to speech), character conversion, Javascript re-layout. 
 <br>
-There are four parts in the TraceFiction, the first part is the browser, and the second part is the navigation, and the third part is the rest reminder and advertising, and the fourth part is the gesture instructions. <br><br></p>
+There are four parts in the TraceFiction, the first part is the browser, and the second part is the navigation view, and the third part is the rest reminder and advertising view, and the fourth part is the gesture instructions view. <br><br></p>
 
-<h3>The first part of the control method of the browser as follows: </h3>
+<h3>The browser-control-method described as follows: </h3>
 
-<pre><code>2 taps of middle part on the screen: navigation page 
-2 taps of left part on the screen: Previous 
-2 taps of right part on the screen: forward
-3 taps: start or pause TTS
-A finger swipe: page scroll 
+<pre><code>2 taps on middle of screen: show navigation page 
+2 taps on left part of screen: Previous 
+2 taps on right part of screen: forward
+3 taps on screen: start or pause TTS
+1 finger swipe: page scroll 
 Swipe from left edge : page up (can be customized) 
 Swipe from right edge page down (can be customized) 
-long press: select content, finished selecting options appear TTS
+Long press: select content, finished selecting options appear TTS
 </code></pre>
 
 <p><br></p>
 
-<h3>The navigation page control methods are as follows:</h3>
+<h3>The navigation-page-control-methods described as follows:</h3>
 
 <pre><code>Navigation page is divided into navigation, text and reading list 
 
@@ -99,23 +99,23 @@ Go: Start a new reading or searching.
 Font settings: You can set the text color, background and size, have set up to reload the page (tracking mode only) 
 
 Track Listing: 
-  Left slide: there may be deleted 
+  Left swipe: Deleted one row
   Double-tap: Set to normal mode or tracking mode 
   Tap: Start Reading 
 </code></pre>
 
 <p><br></p>
 
-<h3>The third part of the rest reminder ad pages and control methods are as follows: </h3>
+<h3>The rest-reminder-view-control-methods described as follows: </h3>
 
 <pre><code>Each hour will remind need to let the eye rest. 
-Close press advertising, or the upper right corner of the Close button. 
+Close view by press advertising, or the upper right corner of the Close button. 
 Once every three hours basis having advertising, please support the author (^_^). 
 </code></pre>
 
 <p><br></p>
 
-<h3>The fourth part of the page is a gesture control method described as follows: </h3>
+<h3>The gesture-instructions-view-control-method described as follows: </h3>
 
 <pre><code>It can set don't display again. ( user can reset it in the setting). </code></pre>
 
@@ -124,13 +124,13 @@ Once every three hours basis having advertising, please support the author (^_^)
 <h2>Notes:</h2>
 
 <pre><code>a. All HTML re-layout are using by Javascript. 
-b. character conversion using the same character conversion TonWenTang Javascript. 
+b. Character conversion using TonWenTang Javascript. 
 c.TTS rules: 
       1.TTS will choose the top left corner of the elements began to read. 
-      2. When resume paused TTS,
-        if not scroll the screen position, 
-        TTS will keep reading from the previous position, 
-        if position is changed,TTSwill start at new position.
+      2. When resume paused TTS:
+        If not scroll the screen position, 
+        TTS will keep reading from the previous position. 
+        If position is changed,TTS will start at new position.
 </code></pre>
       </section>
     </div>
