--- a/en/index.html
+++ b/en/index.html
@@ -33,7 +33,7 @@
       <section id="main_content" class="inner">
         <h1>Welcome to TraceFiction</h1>
 
-<p>TraceFiction is a page dedicated to reading fiction generated software.  <br><br></p>
+<p>TraceFiction is a powerful fiction reading and web browser software.<br><br></p>
 
 <h3>iPhone / iPad users read web fiction often encountered with the following prombles: </ h3>
 
