--- a/en/index.html
+++ b/en/index.html
@@ -91,7 +91,7 @@ Long press: select content, finished selecting options appear TTS
 <pre><code>Navigation page is divided into navigation, text and reading list 
 
 <: Previous 
->: Next Page 
+>: Forward 
 +: Add to Wish List 
 X: Close button 
 The address bar: You can enter the URL or keyword search by Google. 
