--- a/en/index.html
+++ b/en/index.html
@@ -82,6 +82,8 @@ There are four parts in the TraceFiction, the first part is the browser, and the
 Swipe from left edge : page up (can be customized) 
 Swipe from right edge page down (can be customized) 
 Long press: select content, finished selecting options appear TTS
+Tap the top right corner and the upper left: scroll to the top 
+Tap the lower right corner and the bottom left: scroll to footer
 </code></pre>
 
 <p><br></p>
