--- a/en/index.html
+++ b/en/index.html
@@ -141,6 +141,7 @@ c.TTS rules:
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">TraceFiction maintained by <a href="https://github.com/HassenLin">HassenLin</a></p>
+        <p> email : <a href="mailto:hassen.movie01@gmail.com">hassen.movie01@gmail.com</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
