--- a/cn/index.html
+++ b/cn/index.html
@@ -133,9 +133,6 @@ b.繁简转换使用同文堂繁简转换Javascript。
 c.格式处理支援网站列表:
     卡提诺
     连城读书
-    晋江原创网
-    起点中文网
-    起点女生网
 d.TTS 规则：
     1. TTS会选择左上角的元素开始阅读．
     2. 暂停后继续使用TTS，如果没有卷动萤幕位置，
@@ -148,6 +145,7 @@ d.TTS 规则：
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">追小说 maintained by <a href="https://github.com/HassenLin">HassenLin</a></p>
+        <p> email : <a href="mailto:hassen.movie01@gmail.com">hassen.movie01@gmail.com</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
