--- a/tw/index.html
+++ b/tw/index.html
@@ -111,15 +111,7 @@
 
 <p><br></p>
 
-<h3>第三部分休息提醒與廣告頁面的控制方法如下：</h3>
-
-<pre><code>每一小時會提醒需要讓眼睛休息。
-關閉請按廣告，或右上角的關閉按鈕。 每三小時需按一次廣告，贊助一下作者 (^_^)。
-</code></pre>
-
-<p><br></p>
-
-<h3>第四部份是手勢說明頁面的控制方法如下：</h3>
+<h3>第三部份是手勢說明頁面的控制方法如下：</h3>
 
 <pre><code>可以按不再顯示(可以在設定內再次叫出)。
 </code></pre>
@@ -133,9 +125,6 @@ b.繁簡轉換使用同文堂繁簡轉換Javascript。
 c.格式處理支援網站列表:
     卡提諾
     連城讀書
-    晉江原創網
-    起點中文網
-    起點女生網
 d.TTS 規則：
     1. TTS會選擇左上角的元素開始閱讀．
     2. 暫停後繼續使用TTS，如果沒有捲動螢幕位置，
@@ -148,11 +137,10 @@ d.TTS 規則：
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">追小說 maintained by <a href="https://github.com/HassenLin">HassenLin</a></p>
+        <p> email : <a href="mailto:hassen.movie01@gmail.com">hassen.movie01@gmail.com</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-    </div>
-
-    email : <a href="mailto:hassen.movie01@gmail.com">hassen.movie01@gmail.com</a>  
+    </div> 
 
   </body>
 </html>
