--- a/cn/index.html
+++ b/cn/index.html
@@ -111,15 +111,7 @@
 
 <p><br></p>
 
-<h3>第三部分休息提醒与广告页面的控制方法如下：</h3>
-
-<pre><code>每一小时会提醒需要让眼睛休息。
-关闭请按广告，或右上角的关闭按钮。每三小时需按一次广告，赞助一下作者(^_^)。
-</code></pre>
-
-<p><br></p>
-
-<h3>第四部份是手势说明页面的控制方法如下：</h3>
+<h3>第三部份是手势说明页面的控制方法如下：</h3>
 
 <pre><code>可以按不再显示(可以在设定内再次叫出)。
 </code></pre>
