--- a/cn/index.html
+++ b/cn/index.html
@@ -121,6 +121,7 @@
 <h2>附注:</h2>
 
 <pre><code>a.网页格式处理皆由Javascript完成。
+    详细信息请参考：https：//github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
 b.繁简转换使用同文堂繁简转换Javascript。
 c.格式处理支援网站列表:
     卡提诺
@@ -129,6 +130,7 @@ d.TTS 规则：
     1. TTS会选择左上角的元素开始阅读．
     2. 暂停后继续使用TTS，如果没有卷动萤幕位置，
          TTS会从先前的位置继续读下去，如果卷动过，会开始新的TTS．
+e.自1.1.7支援更换字型，但是iOS新增字型较为复杂，详细步骤参考: https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
 </code></pre>
       </section>
     </div>
