--- a/en/index.html
+++ b/en/index.html
@@ -117,7 +117,8 @@ Track Listing:
 <h2>Notes:</h2>
 
 <pre><code>a. All HTML re-layout are using by Javascript.
-        For details, please refer to: https://github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
+    For details, please refer to:
+    https://github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
 b. Character conversion using TonWenTang Javascript. 
 c. TTS rules:
       1.TTS will choose the top left corner of the elements began to read. 
@@ -125,7 +126,9 @@ c. TTS rules:
         If not scroll the screen position, 
         TTS will keep reading from the previous position. 
         If position is changed,TTS will start at new position.
-e.Since 1.1.7 support to change fonts, but iOS install fonts are more complicated, detailed steps refer to: https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
+e.Since 1.1.7 support to change fonts, but iOS install fonts are more complicated.
+    For detailed steps refer to:
+    https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
 </code></pre>
       </section>
     </div>
