--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
 <a name="%E9%99%84%E8%A8%BB" class="anchor" href="#%E9%99%84%E8%A8%BB"><span class="octicon octicon-link"></span></a>附註:</h2>
 
 <pre><code>a.網頁格式處理皆由Javascript完成。
-    詳細資訊請參考: https://github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
+    詳細資訊請參考:
+    https://github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
 b.繁簡轉換使用同文堂繁簡轉換Javascript。
 c.格式處理支援網站列表:
     卡提諾
     連城讀書
-    晉江原創網
-    起點中文網
-    起點女生網
 d.TTS 規則：
     1. TTS會選擇左上角的元素開始閱讀．
     2. 暫停後繼續使用TTS，如果沒有捲動螢幕位置，
-         TTS會從先前的位置繼續讀下去，如果捲動過，會開始新的TTS．
-e.自1.1.7支援更換字型，但是iOS新增字型較為複雜，詳細步驟參考: https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
+         TTS會從先前的位置繼續讀下去，如果捲動過，會開始新的TTS。
+e.自1.1.7支援更換字型，但是iOS新增字型較為複雜。
+    詳細步驟參考:
+    https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
 </code></pre>
       </section>
     </div>
