--- a/cn/index.html
+++ b/cn/index.html
@@ -48,16 +48,18 @@
 
 <p><br></p>
 
-<h3>因应这些问题，追小说被创造出来了，大致来说，追小说有下列功能：</h3>
+<h3>因应这些问题，追小说被创造出来了，追小说有下列特点：</h3>
 
 <pre><code>1. 记录你最后观看的位置．
-2. 特定网站有Javascript格式重新布局，可调整字体大小及颜色．
+2. Javascript格式重新布局，可调整字体大小及颜色．
 3. 左右边界滑动翻页．
-4. 支援同文堂繁简转换．
-5. 支援追踪与一般模式．
-6. 支援多种iOS 7 TTS功能​​，从左上角读到页尾、读出选择文字，选择文字读到页尾等．
-7. 支援线控，蓝牙耳机等播放控制
-8. 支援背景读文章
+4. 支持同文堂繁简转换．
+5. 支持追踪与一般模式．
+6. 支持多种TTS功能​​，从左上角读到页尾、读出选择文字，选择文字读到页尾等．
+7. 支持线控，蓝牙耳机等播放控制
+8. 支持背景读文章
+9. 支持关机朗读
+10. 支持自订安装字体 (字体安装请参阅下面) 
 </code></pre>
 
 <p><br>
