--- a/en/index.html
+++ b/en/index.html
@@ -48,7 +48,7 @@ TTS.
 
 <p><br></p>
 
-<h3>In response to these problems, the TraceFiction was created, TheTraceFiction has the following features: </h3>
+<h3>In response to these problems, the TraceFiction was created, The TraceFiction has the following features: </h3>
 
 <pre><code>1. Record your last viewing position. 
 2. Specific site supply Javascript re-layout format, adjust the font size and color.
@@ -58,6 +58,8 @@ TTS.
 6. Supports multiple iOS 7 TTS function, read footer from the left corner, select the text to read, select the text to read until footer. 
 7. Support wire, Bluetooth headsets and other playback controls 
 8. Support background read mode
+9. Support screen off reading
+10. Support custom font installation (please refer to the following for font installation) 
 </code></pre>
 
 <p><br>
