--- a/tw/index.html
+++ b/tw/index.html
@@ -14,19 +14,6 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/HassenLin/TraceFiction">View on GitHub</a>
-
-          <h1 id="project_title">追小說</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/HassenLin/TraceFiction/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/HassenLin/TraceFiction/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
@@ -48,16 +35,18 @@
 
 <p><br></p>
 
-<h3>因應這些問題，追小說被創造出來了，大致來說，追小說有下列功能：</h3>
+<h3>因應這些問題，追小說被創造出來了，追小說有下列特點：</h3>
 
 <pre><code>1. 記錄你最後觀看的位置．
-2. 特定網站有Javascript格式重新佈局，可調整字體大小及顏色．
+2. Javascript格式重新佈局，可調整字體大小及顏色．
 3. 左右邊界滑動翻頁．
 4. 支援同文堂繁簡轉換．
 5. 支援追蹤與一般模式．
-6. 支援多種iOS 7 TTS功能，從左上角讀到頁尾、讀出選擇文字，選擇文字讀到頁尾等．
+6. 支援多種TTS功能，從左上角讀到頁尾、讀出選擇文字，選擇文字讀到頁尾等．
 7. 支援線控，藍牙耳機等播放控制
 8. 支援背景讀文章
+9. 支援關機朗讀
+10. 支援自訂安裝字體 (字體安裝請參閱下面)
 </code></pre>
 
 <p><br>
@@ -132,7 +121,7 @@ d.TTS 規則：
     2. 暫停後繼續使用TTS，如果沒有捲動螢幕位置，
         TTS會從先前的位置繼續讀下去，如果捲動過，會開始新的TTS．
 e.自1.1.8支援更換字型，但是iOS新增字型較為複雜。
-    詳細步驟參考:
+    iOS新增字型詳細步驟參考:
     https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
 </code></pre>
       </section>
