--- a/cn/index.html
+++ b/cn/index.html
@@ -122,21 +122,20 @@
 
 <h2>附注:</h2>
 
-<pre><code>a.网页格式处理皆由Javascript完成。
-    详细信息请参考：
-    https：//github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
-b.繁简转换使用同文堂繁简转换Javascript。
-c.格式处理支援网站列表:
-    卡提诺
-    连城读书
-d.TTS 规则：
-    1. TTS会选择左上角的元素开始阅读．
-    2. 暂停后继续使用TTS，如果没有卷动萤幕位置，
-         TTS会从先前的位置继续读下去，如果卷动过，会开始新的TTS。
-e.自1.1.8支援更换字型，但是iOS新增字型较为复杂。
-    详细步骤参考:
-    https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
-</code></pre>
+&nbsp;a.网页格式处理皆由Javascript完成。
+&nbsp;&nbsp;详细资讯请参考:
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/HassenLin/TraceFiction/tree/gh-pages/utiljs">util.js</a>
+&nbsp;b.繁简转换使用Javascript。
+&nbsp;c.格式处理支援网站列表:
+&nbsp;&nbsp;卡提诺
+&nbsp;&nbsp;连城读书
+&nbsp;d.TTS 规则：
+&nbsp;&nbsp;1. TTS会选择左上角的元素开始阅读．
+&nbsp;&nbsp;2. 暂停后继续使用TTS，如果没有卷动萤幕位置，
+&nbsp;&nbsp;&nbsp;&nbsp;TTS会从先前的位置继续读下去，如果卷动过，会开始新的TTS．
+&nbsp;e.自1.1.8支援更换字型，但是iOS新增字型较为复杂。
+&nbsp;&nbsp;iOS新增字型详细步骤参考:
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a> 
       </section>
     </div>
 
