--- a/en/index.html
+++ b/en/index.html
@@ -118,20 +118,20 @@ Track Listing:
 
 <h2>Notes:</h2>
 
-<pre><code>a. All HTML re-layout are using by Javascript.
-    For details, please refer to:
-    https://github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
-b. Character conversion using TonWenTang Javascript. 
-c. TTS rules:
-      1.TTS will choose the top left corner of the elements began to read. 
-      2. When resume paused TTS:
-        If not scroll the screen position, 
-        TTS will keep reading from the previous position. 
-        If position is changed,TTS will start at new position.
-e.Since 1.1.8 support to change fonts, but iOS install fonts are more complicated.
-    For detailed steps refer to:
-    https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
-</code></pre>
+&nbsp;a. Webpage format processing is done by Javascript.
+&nbsp;&nbsp;For more information, please refer to:
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/HassenLin/TraceFiction/tree/gh-pages/utiljs">util.js</a>
+&nbsp;b. Javascript is used for the conversion between traditional and simplified Chinese.
+&nbsp;c. Format processing support website list:
+&nbsp;&nbsp;Cartino
+&nbsp;&nbsp;Liancheng Study
+&nbsp;d.TTS rules:
+&nbsp;&nbsp;1. TTS will select the element in the upper left corner to start reading.
+&nbsp;&nbsp;2. Continue to use TTS after the pause, if the screen position is not scrolled,
+&nbsp;&nbsp;&nbsp;&nbsp;TTS will continue to read from the previous position, if scrolled, a new TTS will be started.
+&nbsp;e. Since 1.1.8, it supports changing fonts, but it is more complicated to add fonts in iOS.
+&nbsp;&nbsp;Detailed steps for adding new fonts in iOS:
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a> 
       </section>
     </div>
 
