--- a/tw/index.html
+++ b/tw/index.html
@@ -109,21 +109,20 @@
 
 <h2>附註:</h2>
 
-<pre><code>a.網頁格式處理皆由Javascript完成。
-    詳細資訊請參考:
-    https://github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
-b.繁簡轉換使用同文堂繁簡轉換Javascript。
-c.格式處理支援網站列表:
-    卡提諾
-    連城讀書
-d.TTS 規則：
-    1. TTS會選擇左上角的元素開始閱讀．
-    2. 暫停後繼續使用TTS，如果沒有捲動螢幕位置，
-        TTS會從先前的位置繼續讀下去，如果捲動過，會開始新的TTS．
-e.自1.1.8支援更換字型，但是iOS新增字型較為複雜。
-    iOS新增字型詳細步驟參考:
-    https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
-</code></pre>
+&nbsp;a.網頁格式處理皆由Javascript完成。
+&nbsp;&nbsp;詳細資訊請參考:
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/HassenLin/TraceFiction/tree/gh-pages/utiljs">util.js</a>
+&nbsp;b.繁簡轉換使用Javascript。
+&nbsp;c.格式處理支援網站列表:
+&nbsp;&nbsp;卡提諾
+&nbsp;&nbsp;連城讀書
+&nbsp;d.TTS 規則：
+&nbsp;&nbsp;1. TTS會選擇左上角的元素開始閱讀．
+&nbsp;&nbsp;2. 暫停後繼續使用TTS，如果沒有捲動螢幕位置，
+&nbsp;&nbsp;&nbsp;&nbsp;TTS會從先前的位置繼續讀下去，如果捲動過，會開始新的TTS．
+&nbsp;e.自1.1.8支援更換字型，但是iOS新增字型較為複雜。
+&nbsp;&nbsp;iOS新增字型詳細步驟參考:
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a>
       </section>
     </div>
 
