--- a/en/index.html
+++ b/en/index.html
@@ -118,20 +118,14 @@ Track Listing:
 
 <h2>Notes:</h2>
 
-&nbsp;a. Webpage format processing is done by Javascript.
-&nbsp;&nbsp;For more information, please refer to:
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/HassenLin/TraceFiction/tree/gh-pages/utiljs">util.js</a>
-&nbsp;b. Javascript is used for the conversion between traditional and simplified Chinese.
-&nbsp;c. Format processing support website list:
-&nbsp;&nbsp;Cartino
-&nbsp;&nbsp;Liancheng Study
-&nbsp;d.TTS rules:
-&nbsp;&nbsp;1. TTS will select the element in the upper left corner to start reading.
-&nbsp;&nbsp;2. Continue to use TTS after the pause, if the screen position is not scrolled,
-&nbsp;&nbsp;&nbsp;&nbsp;TTS will continue to read from the previous position, if scrolled, a new TTS will be started.
-&nbsp;e. Since 1.1.8, it supports changing fonts, but it is more complicated to add fonts in iOS.
-&nbsp;&nbsp;Detailed steps for adding new fonts in iOS:
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a> 
+&nbsp;&nbsp;a. Webpage format processing is done by Javascript. For more information, please refer to: <a href="https://github.com/HassenLin/TraceFiction/tree/gh-pages/utiljs">util.js document.</a><br/>
+&nbsp;&nbsp;b. Javascript is used for the conversion between traditional and simplified Chinese.<br/>
+&nbsp;&nbsp;c. Format processing support website list refer to:<a href="https://hassenlin.github.io/TraceFiction/utiljs/util.js">util.js</a>:<br/>
+&nbsp;&nbsp;d.TTS rules:<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;1. TTS will select the element in the upper left corner to start reading.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;2. Continue to use TTS after the pause, if the screen position is not scrolled, TTS will continue to read from the previous position, if scrolled, a new TTS will be started.<br/>
+&nbsp;&nbsp;e. Since 1.1.8, it supports changing fonts, but it is more complicated to add fonts.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;Detailed steps for adding new fonts in iOS: <a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a> <br/>
       </section>
     </div>
 
