--- a/tw/video.html
+++ b/tw/video.html
@@ -1,8 +1,16 @@
 <html>
 <head>
-<title> TraceFiction" </title>
+<title> 追小說 </title>
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <embed
+    src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0?autohide=1&autoplay=1"
+    wmode="transparent"
+    type="video/mp4"
+    width="100%" height="100%"
+    allow="autoplay; encrypted-media; picture-in-picture"
+    allowfullscreen
+    title="Keyboard Cat"
+  >
 </body>
 
