--- a/cn/video.html
+++ b/cn/video.html
@@ -3,14 +3,6 @@
 <title> 追小说 </title>
 </head>
 <body>
-    <embed
-    src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0?autohide=1&autoplay=1"
-    wmode="transparent"
-    type="video/mp4"
-    width="100%" height="100%"
-    allow="autoplay; encrypted-media; picture-in-picture"
-    allowfullscreen
-    title="Keyboard Cat"
-  >
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="追小说" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
