--- a/cn/video.html
+++ b/cn/video.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title> 追小说 </title>
+<title> 追小说 Video</title>
 </head>
 <body>
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="追小说" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="追小说 Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
