--- a/en/video.html
+++ b/en/video.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title> TraceFiction </title>
+<title> TraceFiction Video</title>
 </head>
 <body>
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="TraceFiction" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="TraceFiction Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
