--- a/cn/index.html
+++ b/cn/index.html
@@ -129,7 +129,9 @@
 &nbsp;&nbsp;&nbsp;&nbsp;1. TTS会选择左上角的元素开始阅读．<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;2. 暂停后继续使用TTS，如果没有卷动萤幕位置，TTS会从先前的位置继续读下去，如果卷动过，会开始新的TTS．<br/>
 &nbsp;&nbsp;e.自1.1.8支援更换字型，但是新增字型较为复杂。<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;推荐华康秀风体<br/> 
 &nbsp;&nbsp;&nbsp;&nbsp;iOS新增字型详细步骤参考: <a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a> <br/>
+&nbsp;&nbsp;&nbsp;&nbsp;Android新增字型请把字型档放置于 Storage/Android/data/idv.hassen.tracefiction/font 里面<br/> 
       </section>
     </div>
 
