--- a/en/index.html
+++ b/en/index.html
@@ -126,6 +126,7 @@ Track Listing:
 &nbsp;&nbsp;&nbsp;&nbsp;2. Continue to use TTS after the pause, if the screen position is not scrolled, TTS will continue to read from the previous position, if scrolled, a new TTS will be started.<br/>
 &nbsp;&nbsp;e. Since 1.1.8, it supports changing fonts, but it is more complicated to add fonts.<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;Detailed steps for adding new fonts in iOS: <a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a> <br/>
+&nbsp;&nbsp;&nbsp;&nbsp;For Android new fonts, please place the font file in Storage/Android/data/idv.hassen.tracefiction/font<br/> 
       </section>
     </div>
 
