--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="追小說 : ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
 
     <title>追小說</title>
   </head>
@@ -14,30 +14,15 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/HassenLin/TraceFiction">View on GitHub</a>
-
-          <h1 id="project_title">追小說</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/HassenLin/TraceFiction/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/HassenLin/TraceFiction/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="%E6%AD%A1%E8%BF%8E%E4%BD%BF%E7%94%A8%E8%BF%BD%E5%B0%8F%E8%AA%AA" class="anchor" href="#%E6%AD%A1%E8%BF%8E%E4%BD%BF%E7%94%A8%E8%BF%BD%E5%B0%8F%E8%AA%AA"><span class="octicon octicon-link"></span></a>歡迎使用追小說</h1>
+        <h1>歡迎使用追小說</h1>
 
 <p>追小說是一套專門為了網頁小說閱讀而產生的軟體。<br><br></p>
 
-<h3>
-<a name="%E4%B8%80%E8%88%AC%E7%94%A8%E4%BD%BF%E7%94%A8%E8%80%85%E4%BD%BF%E7%94%A8-iphoneipad-%E7%B6%B2%E9%A0%81%E9%96%B1%E8%AE%80%E5%B8%B8%E5%B8%B8%E7%A2%B0%E5%88%B0%E4%B8%8B%E5%88%97%E5%95%8F%E9%A1%8C" class="anchor" href="#%E4%B8%80%E8%88%AC%E7%94%A8%E4%BD%BF%E7%94%A8%E8%80%85%E4%BD%BF%E7%94%A8-iphoneipad-%E7%B6%B2%E9%A0%81%E9%96%B1%E8%AE%80%E5%B8%B8%E5%B8%B8%E7%A2%B0%E5%88%B0%E4%B8%8B%E5%88%97%E5%95%8F%E9%A1%8C"><span class="octicon octicon-link"></span></a>一般用使用者使用 iPhone/iPad 網頁閱讀常常碰到下列問題：</h3>
+<h3>一般用使用者使用 iPhone/iPad 網頁閱讀常常碰到下列問題：</h3>
 
 <pre><code>不知道讀到哪一頁？
 捲動很難翻一整頁？
@@ -50,17 +35,18 @@
 
 <p><br></p>
 
-<h3>
-<a name="%E5%9B%A0%E6%87%89%E9%80%99%E4%BA%9B%E5%95%8F%E9%A1%8C%E8%BF%BD%E5%B0%8F%E8%AA%AA%E8%A2%AB%E5%89%B5%E9%80%A0%E5%87%BA%E4%BE%86%E4%BA%86%E5%A4%A7%E8%87%B4%E4%BE%86%E8%AA%AA%E8%BF%BD%E5%B0%8F%E8%AA%AA%E6%9C%89%E4%B8%8B%E5%88%97%E5%8A%9F%E8%83%BD" class="anchor" href="#%E5%9B%A0%E6%87%89%E9%80%99%E4%BA%9B%E5%95%8F%E9%A1%8C%E8%BF%BD%E5%B0%8F%E8%AA%AA%E8%A2%AB%E5%89%B5%E9%80%A0%E5%87%BA%E4%BE%86%E4%BA%86%E5%A4%A7%E8%87%B4%E4%BE%86%E8%AA%AA%E8%BF%BD%E5%B0%8F%E8%AA%AA%E6%9C%89%E4%B8%8B%E5%88%97%E5%8A%9F%E8%83%BD"><span class="octicon octicon-link"></span></a>因應這些問題，追小說被創造出來了，大致來說，追小說有下列功能：</h3>
+<h3>因應這些問題，追小說被創造出來了，追小說有下列特點：</h3>
 
 <pre><code>1. 記錄你最後觀看的位置．
-2. 特定網站有Javascript格式重新佈局，可調整字體大小及顏色．
+2. Javascript格式重新佈局，可調整字體大小及顏色．
 3. 左右邊界滑動翻頁．
 4. 支援同文堂繁簡轉換．
 5. 支援追蹤與一般模式．
-6. 支援多種iOS 7 TTS功能，從左上角讀到頁尾、讀出選擇文字，選擇文字讀到頁尾等．
+6. 支援多種TTS功能，從左上角讀到頁尾、讀出選擇文字，選擇文字讀到頁尾等．
 7. 支援線控，藍牙耳機等播放控制
 8. 支援背景讀文章
+9. 支援關機朗讀
+10. 支援自訂安裝字體 (字體安裝請參閱下面)
 </code></pre>
 
 <p><br>
@@ -76,8 +62,7 @@
 <br>
 再來是操作方式，追小說共有四個部分，第一部分是瀏覽器、第二部分是導覽頁、第三部分是休息提醒與廣告、第四部份是手勢說明。<br><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86%E7%80%8F%E8%A6%BD%E5%99%A8%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86%E7%80%8F%E8%A6%BD%E5%99%A8%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span></a>第一部分瀏覽器的控制方法如下：</h3>
+<h3>第一部分瀏覽器的控制方法如下：</h3>
 
 <pre><code>2指中間點一下：叫出導覽頁
 2指左邊點一下：上一頁
@@ -89,12 +74,13 @@
 1指點兩下：調整閱讀尺寸（追蹤模式無效）
 2指點開合：放大及縮小（追蹤模式無效）
 1指長按：選擇內容，選完出現TTS選項
+左上右上角同時按下：捲動到頁首
+左下右下角同時按下：捲動到頁尾
 </code></pre>
 
 <p><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%BA%8C%E9%83%A8%E5%88%86%E5%B0%8E%E8%A6%BD%E9%A0%81%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E4%BA%8C%E9%83%A8%E5%88%86%E5%B0%8E%E8%A6%BD%E9%A0%81%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span></a>第二部分導覽頁的控制方法如下：</h3>
+<h3>第二部分導覽頁的控制方法如下：</h3>
 
 <pre><code>導覽頁分為導覽、文字與閱讀清單
 
@@ -114,41 +100,25 @@
 
 <p><br></p>
 
-<h3>
-<a name="%E7%AC%AC%E4%B8%89%E9%83%A8%E5%88%86%E4%BC%91%E6%81%AF%E6%8F%90%E9%86%92%E8%88%87%E5%BB%A3%E5%91%8A%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E4%B8%89%E9%83%A8%E5%88%86%E4%BC%91%E6%81%AF%E6%8F%90%E9%86%92%E8%88%87%E5%BB%A3%E5%91%8A%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span></a>第三部分休息提醒與廣告頁面的控制方法如下：</h3>
-
-<pre><code>每一小時會提醒需要讓眼睛休息。
-關閉請按廣告，或右上角的關閉按鈕。 每三小時需按一次廣告，贊助一下作者 (^_^)。
-</code></pre>
-
-<p><br></p>
-
-<h3>
-<a name="%E7%AC%AC%E5%9B%9B%E9%83%A8%E4%BB%BD%E6%98%AF%E6%89%8B%E5%8B%A2%E8%AA%AA%E6%98%8E%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B" class="anchor" href="#%E7%AC%AC%E5%9B%9B%E9%83%A8%E4%BB%BD%E6%98%AF%E6%89%8B%E5%8B%A2%E8%AA%AA%E6%98%8E%E9%A0%81%E9%9D%A2%E7%9A%84%E6%8E%A7%E5%88%B6%E6%96%B9%E6%B3%95%E5%A6%82%E4%B8%8B"><span class="octicon octicon-link"></span></a>第四部份是手勢說明頁面的控制方法如下：</h3>
+<h3>第三部份是手勢說明頁面的控制方法如下：</h3>
 
 <pre><code>可以按不再顯示(可以在設定內再次叫出)。
 </code></pre>
 
 <p><br></p>
 
-<h2>
-<a name="%E9%99%84%E8%A8%BB" class="anchor" href="#%E9%99%84%E8%A8%BB"><span class="octicon octicon-link"></span></a>附註:</h2>
+<h2>附註:</h2>
 
-<pre><code>a.網頁格式處理皆由Javascript完成。
-    詳細資訊請參考:
-    https://github.com/HassenLin/TraceFiction/tree/gh-pages/sitejs
-b.繁簡轉換使用同文堂繁簡轉換Javascript。
-c.格式處理支援網站列表:
-    卡提諾
-    連城讀書
-d.TTS 規則：
-    1. TTS會選擇左上角的元素開始閱讀．
-    2. 暫停後繼續使用TTS，如果沒有捲動螢幕位置，
-         TTS會從先前的位置繼續讀下去，如果捲動過，會開始新的TTS。
-e.自1.1.8支援更換字型，但是iOS新增字型較為複雜。
-    詳細步驟參考:
-    https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone/
-</code></pre>
+&nbsp;&nbsp;a.網頁格式處理皆由Javascript完成。 詳細資訊請參考: <a href="https://github.com/HassenLin/TraceFiction/tree/gh-pages/utiljs">util.js 說明</a><br/>
+&nbsp;&nbsp;b.繁簡轉換使用Javascript。<br/>
+&nbsp;&nbsp;c.格式處理支援網站列表請參考: <a href="https://hassenlin.github.io/TraceFiction/utiljs/util.js">util.js</a><br/>
+&nbsp;&nbsp;d.TTS 規則：<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;1. TTS會選擇左上角的元素開始閱讀．<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;2. 暫停後繼續使用TTS，如果沒有捲動螢幕位置，TTS會從先前的位置繼續讀下去，如果捲動過，會開始新的TTS．<br/>
+&nbsp;&nbsp;e.自1.1.8支援更換字型，但是新增字型較為複雜。<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;推薦華康秀風體<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;iOS新增字型詳細步驟參考: <a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;Android新增字型請把字型檔放置於 Storage/Android/data/idv.hassen.tracefiction/font 裡面<br/>
       </section>
     </div>
 
@@ -156,11 +126,10 @@ e.自1.1.8支援更換字型，但是iOS新增字型較為複雜。
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">追小說 maintained by <a href="https://github.com/HassenLin">HassenLin</a></p>
+        <p> email : <a href="mailto:hassen.movie01@gmail.com">hassen.movie01@gmail.com</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-    </div>
-
-    
+    </div> 
 
   </body>
 </html>
