--- a/tw/index.html
+++ b/tw/index.html
@@ -116,7 +116,9 @@
 &nbsp;&nbsp;&nbsp;&nbsp;1. TTS會選擇左上角的元素開始閱讀．<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;2. 暫停後繼續使用TTS，如果沒有捲動螢幕位置，TTS會從先前的位置繼續讀下去，如果捲動過，會開始新的TTS．<br/>
 &nbsp;&nbsp;e.自1.1.8支援更換字型，但是新增字型較為複雜。<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;推薦華康秀風體<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;iOS新增字型詳細步驟參考: <a href="https://www.howtogeek.com/350438/how-to-install-fonts-on-an-ipad-or-iphone">how to install fonts on an ipad or iphone</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;Android新增字型請把字型檔放置於 Storage/Android/data/idv.hassen.tracefiction/font 裡面<br/>
       </section>
     </div>
 
