add new feature

--- a/tw/index.html
+++ b/tw/index.html
@@ -20,6 +20,10 @@
       <section id="main_content" class="inner">
         <h1>歡迎使用追小說</h1>
 
+<h3>新功能:</h3>
+1. 可以開啟html組成的zip2檔案了</br>
+2. 可以使用<a href="https://github.com/HassenLin/TraceFiction/releases">Windows 版小說下載器</a>來製作zip檔案,使用"Windows 版小說下載器"前需要安裝 <a href="https://developer.microsoft.com/en-us/microsoft-edge/webview2/" Microsoft edge webview2 runtime</a>
+
 <p>追小說是一套專門為了網頁小說閱讀而產生的軟體。<br><br></p>
 
 <h3>一般用使用者使用 iPhone/iPad 網頁閱讀常常碰到下列問題：</h3>
