--- a/cn/index.html
+++ b/cn/index.html
@@ -32,7 +32,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>欢迎使用追小说</h1>
-
+<h3>新功能：</ h3>
+1.可以开启html组成的zip文件了</br>
+2.可以使用<a href="https://github.com/HassenLin/TraceFiction/releases"> Windows版小说下载器</a>来制作zip文件，使用“ Windows版小说下载器”前需要安装< a href =“ https://developer.microsoft.com/en-us/microsoft-edge/webview2/”> Microsoft edge webview2 runtime</a> 
 <p>追小说是一套专门为了网页小说阅读而产生的软体。 <br><br></p>
 
 <h3>一般用使用者使用iPhone/iPad 网页阅读常常碰到下列问题：</ h3>
