--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="d​​escription" content="TraceFiction">
+    <meta name="description" content="TraceFiction">
 
     <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
 
@@ -13,7 +13,7 @@
 
   <body>
 
-    <!-​​- HEADER -->
+    <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/HassenLin/TraceFiction">View on GitHub</a>
@@ -28,12 +28,12 @@
         </header>
     </div>
 
-    <!-​​- MAIN CONTENT -->
+    <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>Welcome to TraceFiction</h1>
 <h3>New features:</ h3>
-1. You can open the htnl base zip.</br>
+1. You can open the html base zip.</br>
 2. You can use <a href="https://github.com/HassenLin/TraceFiction/releases"> Windows version of the novel downloader</a> to make a zip file, you need to install it before using the "Windows version of the novel downloader"< a href = "https://developer.microsoft.com/en-us/microsoft-edge/webview2/"> Microsoft edge webview2 runtime</a>
       
 <p>Chasing Novels is a set of software produced specifically for reading web novels. <br><br></p> 
