--- a/en/index.html
+++ b/en/index.html
@@ -34,7 +34,7 @@
         <h1>Welcome to TraceFiction</h1>
 <h3>New features:</h3>
 1. You can open the html base zip.</br>
-2. You can use <a href="https://github.com/HassenLin/TraceFiction/releases"> Windows version of the novel downloader</a> to make a zip file, you need to install it before using the "Windows version of the novel downloader"<a href = "https://developer.microsoft.com/en-us/microsoft-edge/webview2/"> Microsoft edge webview2 runtime</a>
+2. You can use <a href="https://github.com/HassenLin/TraceFiction/releases"> Windows version of the novel downloader</a> to make a zip file, you need to install <a href = "https://developer.microsoft.com/en-us/microsoft-edge/webview2/"> Microsoft edge webview2 runtime</a> before using the "Windows version of the novel downloader".
       
 <p>Chasing Novels is a set of software produced specifically for reading web novels. <br><br></p> 
 <p>TraceFiction is a powerful fiction reading and web browser software.<br><br></p>
