update video page

--- a/cn/video.html
+++ b/cn/video.html
@@ -3,6 +3,10 @@
 <title> 追小说 Video</title>
 </head>
 <body>
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="追小说 Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <table border="0" width="100%" height="100%">
+        <tr height="40px"><td><table border="0" width="100%"><tr><td width="60px"><img src= "../images/two_tab_center.png"></td><td>想跳过教学视频，请在萤幕中央用双指同时点击开启设定，切换到其他页面。</td></tr></table></td></tr>
+        <tr><td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="追小说 Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </table>    
 </body>
+
 
