--- a/en/video.html
+++ b/en/video.html
@@ -3,6 +3,9 @@
 <title> TraceFiction Video</title>
 </head>
 <body>
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="TraceFiction Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <table border="0" width="100%" height="100%">        
+        <tr height="40px"><td><table border="0" width="100%"><tr><td width="60px"><img src= "../images/two_tab_center.png"></td><td>If you want to skip the tutorial video, please use two fingers in the center of the screen to open the settings at the same time, and switch to another page.</td></tr></table></td></tr>
+        <tr><td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="TraceFiction Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </table>    
 </body>
 
