--- a/tw/video.html
+++ b/tw/video.html
@@ -3,6 +3,9 @@
 <title> 追小說 Video</title>
 </head>
 <body>
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="追小說 Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <table border="0" width="100%" height="100%">
+        <tr height="40px"><td><table border="0" width="100%"><tr><td width="60px"><img src= "../images/two_tab_center.png"></td><td>想跳過教學影片，請在螢幕中央用雙指同時點擊開啟設定，切換到其他頁面。</td></tr></table></td></tr>
+        <tr><td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmxxX6U_cnI?controls=0" title="追小說 Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </table>
 </body>
 
